fix overflow

--- a/debugger/src/App.css
+++ b/debugger/src/App.css
@@ -66,7 +66,7 @@
 }
 
 .TreeAndDoc .DecisionTree {
-    overflow-y: scroll;
+    overflow: scroll;
     flex-grow: 1;
 }
 
@@ -76,6 +76,7 @@
  */
 .TreeAndDoc .DecisionTree > ul {
     min-height: 100%;
+    width: fit-content;
 }
 
 .TreeAndDoc .InlineDocs {
